<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AppInfoDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_app_info_detail_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tv_app_info_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_name"/>

        <TextView
            android:id="@+id/tv_app_info_detail_package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_package_name"/>

        <TextView
            android:id="@+id/tv_app_info_detail_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_version"/>

        <TextView
            android:id="@+id/tv_app_info_detail_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_version_code"/>

        <TextView
            android:id="@+id/tv_app_info_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_type"/>

        <TextView
            android:id="@+id/tv_app_info_detail_last_modified_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_last_modified_date"/>

        <TextView
            android:id="@+id/tv_app_info_detail_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_size"/>

        <TextView
            android:id="@+id/tv_app_info_detail_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_path"/>

        <TextView
            android:id="@+id/tv_app_info_detail_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info_permission"/>

    </LinearLayout>

</ScrollView >