<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AppInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="18sp"
            android:text="@string/app_info_title"/>

        <CheckBox
            android:id="@+id/cb_app_info_display_system_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_info_display_system_app"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_app_info_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="@string/app_info_search"
        android:inputType="text"
        tools:ignore="AutoFill"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_app_info_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_app_info_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export"/>

</LinearLayout>